Fix Bug: On small screen view all button hide fixed!
Using javascript add event on window.mediaQuery that track the window size using this i change the content of view all button.

--- a/style.css
+++ b/style.css
@@ -312,10 +312,6 @@ header .drop__down li:nth-child(2):hover .fa {
         font-size: 15px;
     }
 
-    .view {
-        display: none;
-        width: 0%;
-    }
 
 
     .drop__down {
